
[TestMatchJSON/should_make_a_json_object_snapshot - 1]
{
 "mock-0": "value",
 "mock-1": 2,
 "mock-2": {
  "Msg": "Hello World"
 },
 "mock-3": 10.4
}
---

[TestMatchJSON/should_create_a_prettyJSON_snap - 1]
{
 "age": 10,
 "email": "mock@email.com",
 "user": "mock-user"
}
---

[TestMatchJSON/should_create_a_prettyJSON_snap - 2]
{
 "age": 10,
 "email": "mock@email.com",
 "user": "mock-user"
}
---

[TestMatchJSON/should_marshal_struct - 1]
{
 "email": "mock@email.com",
 "keys": [
  1,
  2,
  3,
  4,
  5
 ],
 "name": "mock-name"
}
---

[TestMatchers/Custom_matcher/struct_marshalling - 1]
{
 "email": "mock-user@email.com",
 "keys": [
  1,
  2,
  3,
  4,
  5
 ],
 "name": "mock-user"
}
---

[TestMatchers/Any_matcher/should_ignore_fields - 1]
{
 "age": 10,
 "nested": {
  "now": [
   "<Any value>"
  ]
 },
 "user": "mock-user"
}
---

[TestMatchers/my_matcher/should_allow_using_your_matcher - 1]
{
 "value": "blue"
}
---

[TestMatchers/Custom_matcher/JSON_string_validation - 1]
{
 "age": "<less than 5 age>",
 "email": "mock@email.com",
 "user": "mock-user"
}
---

[TestMatchers/Any_matcher/http_response - 1]
{
 "data": {
  "createdAt": "<Any value>",
  "message": "hello world"
 }
}
---

[TestMatchers/Type_matcher/should_create_snapshot_with_type_placeholder - 1]
{
 "data": "<Type:float64>"
}
---

[TestMatchers/Type_matcher/should_create_snapshot_with_type_placeholder - 2]
{
 "metadata": "<Type:map[string]interface {}>"
}
---
